fix scroll overflow

--- a/src/tie-web-interface/src/assets/styles/main.scss
+++ b/src/tie-web-interface/src/assets/styles/main.scss
@@ -17,6 +17,8 @@ body {
 body {
   display: flex;
   flex-direction: column;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 #app {
